--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "sass": "^1.82.0"
   },
   "scripts": {
-    "sass": "sass styles/scss/style.scss styles/style.min.css --style=compressed"
+    "sass": "sass styles/scss/style.scss styles/style.min.css --style=compressed -w"
   }
 }
